[fix] Padding overflow - arbolesibericos

--- a/arbolesibericos/styles/custom.scss
+++ b/arbolesibericos/styles/custom.scss
@@ -8,8 +8,8 @@ $primary: #117a8b;
 	background-repeat: no-repeat;
 }
 
-.p-10 {
-	padding: 10em;
+.py-10 {
+	padding: 10em 0;
 }
 
 .bg-transparent-dark {
